TabBar v-align issue

--- a/themes/common/TabBar.less
+++ b/themes/common/TabBar.less
@@ -81,7 +81,7 @@
 		}
 	}
 	.mblTabBarButton {
-		margin-top: 6px;
+		margin: 6px 0;
 		width: 100px;
 		height: 28px;
 		border-width: 1px 1px 1px 0px;
